--- a/FluentQueryBuilder/FluentQueryBuilder/FluentQueryBuilder.csproj
+++ b/FluentQueryBuilder/FluentQueryBuilder/FluentQueryBuilder.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Attributes\FluentPropertyAttribute.cs" />
     <Compile Include="ConditionResolver.cs" />
     <Compile Include="Configuration\ExpressionParserConfiguration.cs" />
-    <Compile Include="Configuration\QueryBuilderConfiguration.cs" />
+    <Compile Include="Configuration\ObjectMapperConfiguration.cs" />
     <Compile Include="ConverterResolver.cs" />
     <Compile Include="Converters\BooleanConverter.cs" />
     <Compile Include="Converters\DateTimeConverter.cs" />
@@ -52,14 +52,17 @@
     <Compile Include="Converters\IPropertyConverter.cs" />
     <Compile Include="Converters\ObjectConverter.cs" />
     <Compile Include="ExpressionTypeTransformer.cs" />
-    <Compile Include="Extensions\FluentExpressionExtensions.cs" />
-    <Compile Include="Extensions\FluentMappingExtensons.cs" />
+    <Compile Include="Extensions\ExpressionExtensions.cs" />
+    <Compile Include="Extensions\MappingExtensons.cs" />
     <Compile Include="FluentObject.cs" />
     <Compile Include="IConditionResolver.cs" />
     <Compile Include="IConverterResolver.cs" />
     <Compile Include="IExpressionTypeTransformer.cs" />
     <Compile Include="IStringificationRulesResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\IQueryProvider.cs" />
+    <Compile Include="Query\QueryBuilderHelper.cs" />
+    <Compile Include="Query\QueryProvider.cs" />
     <Compile Include="StringificationRulesResolver.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
