--- a/FluentQueryBuilder/FluentQueryBuilder.Tests/FluentQueryBuilder.Tests.csproj
+++ b/FluentQueryBuilder/FluentQueryBuilder.Tests/FluentQueryBuilder.Tests.csproj
@@ -61,7 +61,13 @@
     <Compile Include="Extensions\ExpressionExtensionsTests.cs" />
     <Compile Include="Models\NamedFluentModel.cs" />
     <Compile Include="Models\FluentModel.cs" />
+    <Compile Include="Models\NamedFluentModelBase.cs" />
+    <Compile Include="Query\QueryProviderSelectorsTests.cs" />
+    <Compile Include="Query\QueryProviderLimitsTests.cs" />
     <Compile Include="Query\QueryProviderTests.cs" />
+    <Compile Include="Query\QueryProviderSingleSelectorsTests.cs" />
+    <Compile Include="Query\QueryProviderOrderingTests.cs" />
+    <Compile Include="Query\QueryProviderMathTests.cs" />
     <Compile Include="StringificationRulesResolverTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConditionResolverTests.cs" />
