--- a/Package.nuspec
+++ b/Package.nuspec
@@ -5,6 +5,7 @@
     <version>1.0.0</version>
     <authors>UlasauV</authors>
     <owners>UlasauV</owners>
+	<licenseUrl>https://github.com/vulasau/fluent-query-builder/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/vulasau/fluent-query-builder</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>An extensions for fluent mapping of object properties to dynamic entity and building string queries based on this properties parsing expression trees.</description>
