--- a/FluentQueryBuilder/FluentQueryBuilder/FluentQueryBuilder.csproj
+++ b/FluentQueryBuilder/FluentQueryBuilder/FluentQueryBuilder.csproj
@@ -58,6 +58,8 @@
     <Compile Include="IConditionResolver.cs" />
     <Compile Include="IConverterResolver.cs" />
     <Compile Include="IExpressionTypeTransformer.cs" />
+    <Compile Include="NullComparisonResolver.cs" />
+    <Compile Include="NullComparisonResolverBase.cs" />
     <Compile Include="IQueryExecutor.cs" />
     <Compile Include="IStringificationRulesResolver.cs" />
     <Compile Include="Linq\FluentQueriable.cs" />
