--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>FluentQueryBuilder</id>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     <authors>UlasauV</authors>
     <owners>UlasauV</owners>
 	<licenseUrl>https://github.com/vulasau/fluent-query-builder/blob/master/LICENSE</licenseUrl>
@@ -11,7 +11,7 @@
     <description>An extensions for fluent mapping of object properties to dynamic entity and building string queries based on this properties parsing expression trees.</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2018</copyright>
-    <tags>FluentQueryBuilder</tags>
+    <tags>FluentQueryBuilder Fluent QueryBuilder ExpressionParser</tags>
   </metadata>
   <files>
 	<file src="FluentQueryBuilder\FluentQueryBuilder\bin\Debug\FluentQueryBuilder.dll" target="lib\net45\FluentQueryBuilder.dll"/>
