--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>FluentQueryBuilder</id>
-    <version>1.1.0</version>
+    <version>1.1.1</version>
     <authors>UlasauV</authors>
     <owners>UlasauV</owners>
 	<licenseUrl>https://github.com/vulasau/fluent-query-builder/blob/master/LICENSE</licenseUrl>
@@ -10,10 +10,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>An extensions for fluent mapping of object properties to dynamic entity and building string queries based on this properties parsing expression trees.</description>
     <releaseNotes>
-		DependencyAttribute - allows to make property mapping dependent on other class properties.
-		Query execution interface - IFluentQueriable now has methods for execution of query.
-		Breakdown changes!
-		Condition resolving parameters were moved to separate attribute ConditionAttribute.
+		Moved query execution interface from IFluentQueriable to IFluentList
 	</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>FluentQueryBuilder Fluent QueryBuilder ExpressionParser</tags>
