--- a/FluentQueryBuilder/FluentQueryBuilder/FluentQueryBuilder.csproj
+++ b/FluentQueryBuilder/FluentQueryBuilder/FluentQueryBuilder.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ConditionResolver.cs" />
     <Compile Include="Configuration\ExpressionParserConfiguration.cs" />
     <Compile Include="Configuration\ObjectMapperConfiguration.cs" />
+    <Compile Include="ConverterFactory.cs" />
     <Compile Include="ConverterResolver.cs" />
     <Compile Include="Converters\BooleanConverter.cs" />
     <Compile Include="Converters\DateTimeConverter.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="FluentObject.cs" />
     <Compile Include="IConditionResolver.cs" />
+    <Compile Include="IConverterFactory.cs" />
     <Compile Include="IConverterResolver.cs" />
     <Compile Include="IExpressionTypeTransformer.cs" />
     <Compile Include="Linq\FluentList.cs" />
