Converter attribute allows converter parameters. package version 1.1.3

--- a/FluentQueryBuilder/FluentQueryBuilder/FluentQueryBuilder.csproj
+++ b/FluentQueryBuilder/FluentQueryBuilder/FluentQueryBuilder.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\ConditionAttribute.cs" />
+    <Compile Include="Attributes\ConverterAttribute.cs" />
     <Compile Include="Attributes\DependencyAttribute.cs" />
     <Compile Include="Attributes\FluentEntityAttribute.cs" />
     <Compile Include="Attributes\FluentPropertyAttribute.cs" />
