Enum comparison expressions.

--- a/FluentQueryBuilder/FluentQueryBuilder/FluentQueryBuilder.csproj
+++ b/FluentQueryBuilder/FluentQueryBuilder/FluentQueryBuilder.csproj
@@ -62,16 +62,17 @@
     <Compile Include="Extensions\ExpressionExtensions.cs" />
     <Compile Include="Extensions\MappingExtensons.cs" />
     <Compile Include="Extensions\PropertyExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="FluentObject.cs" />
     <Compile Include="IConditionResolver.cs" />
     <Compile Include="IConverterFactory.cs" />
     <Compile Include="IConverterResolver.cs" />
     <Compile Include="IExpressionTypeTransformer.cs" />
+    <Compile Include="INullComparisonResolver.cs" />
     <Compile Include="Linq\FluentList.cs" />
     <Compile Include="Linq\IFluentList.cs" />
     <Compile Include="NullComparisonResolver.cs" />
-    <Compile Include="NullComparisonResolverBase.cs" />
     <Compile Include="IQueryExecutor.cs" />
     <Compile Include="IStringificationRulesResolver.cs" />
     <Compile Include="Linq\FluentQueryable.cs" />
