--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>FluentQueryBuilder</id>
-    <version>1.1.4</version>
+    <version>1.1.5</version>
     <authors>UlasauV</authors>
     <owners>UlasauV</owners>
 	<licenseUrl>https://github.com/vulasau/fluent-query-builder/blob/master/LICENSE</licenseUrl>
@@ -11,8 +11,8 @@
     <description>An extensions for fluent mapping of object properties to dynamic entity and building string queries based on this properties parsing expression trees.</description>
     <releaseNotes>
 		Bug fixes.
-		Moved converter parameters from FluentProeprtyAttribute to separate ConverterAttribute.
-		Breaking changes.
+		Refactoring.
+		Enum type comparison expressions parser.
 	</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>FluentQueryBuilder Fluent QueryBuilder ExpressionParser</tags>
