--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>FluentQueryBuilder</id>
-    <version>1.1.6</version>
+    <version>1.1.7</version>
     <authors>UlasauV</authors>
     <owners>UlasauV</owners>
 	<licenseUrl>https://github.com/vulasau/fluent-query-builder/blob/master/LICENSE</licenseUrl>
@@ -10,9 +10,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>An extensions for fluent mapping of object properties to dynamic entity and building string queries based on this properties parsing expression trees.</description>
     <releaseNotes>
-		Bug fixes.
-		Refactoring.
-		Enum type comparison expressions parser.
+		Added ordering to FirstOrDefault
 	</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>FluentQueryBuilder Fluent QueryBuilder ExpressionParser</tags>
